--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "font-awesome": "^4.7.0",
     "ngx-page-scroll-core": "^7.0.0",
+    "ngx-spinner": "^8.0.3",
     "primeicons": "^2.0.0",
     "primeng": "^8.1.1",
     "rxjs": "~6.4.0",
